--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,8 @@
 
                 <textarea name=" " placeholder="your message " id=" " cols="30 " rows="10 "></textarea>
 
-                <input type="submit " value="send message " class="btn ">
+               <!-- <input type="submit " value="send message " class="btn "> -->
+                            <button type="submit">Send message</button> 
 
             </form>
 
