--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                 <textarea name=" " placeholder="your message " id=" " cols="30 " rows="10 "></textarea>
 
                <!-- <input type="submit " value="send message " class="btn "> -->
-                            <button type="submit">Send message</button> 
+                            <button type="submit" class="btn" >Send message</button> 
 
             </form>
 
