--- a/contact.html
+++ b/contact.html
@@ -81,8 +81,7 @@
 
                 <textarea name=" " placeholder="your message " id=" " cols="30 " rows="10 "></textarea>
 
-               <!-- <input type="submit " value="send message " class="btn "> -->
-                            <button type="submit" class="btn" >Send message</button> 
+               <button type="submit " value="send message " class="btn "> </button> 
 
             </form>
 
