--- a/contact.html
+++ b/contact.html
@@ -6,9 +6,25 @@
     <title>contact</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- font awesome cdn link  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
+    <!-- custom css file link  -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    
+    <!-- navbar section starts  -->
+
+    <nav class="navbar">
+        <a href="index.html"> <i class="fas fa-home"></i> <span>home</span> </a>
+        <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
+        <a href="youtube.html"> <i class="fas fa-video"></i> <span>YouTube</span> </a>
+        <a href="contact.html"> <i class="fas fa-book-reader"></i> <span>contact</span> </a>
+    </nav>
+
+    <!-- navbar section ends -->
 
     <div class="contact-section">
 
