--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <input type="email" class="contact-form-text" placeholder="Your email">
             <input type="text" class="contact-form-text" placeholder="Your phone">
             <textarea class="contact-form-text" placeholder="Your message"></textarea>
-            <input type="submit" class="contact-form-btn" value="Send">
+            <input type="submit" class="index.html" value="Send">
         </form>
     </div>
     
