--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>contact</title>
+    <link rel="shortcut icon" type="images" href="images/1.jpg">
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- font awesome cdn link  -->
@@ -15,16 +16,6 @@
 
 <body>
     
-    <!-- navbar section starts  -->
-
-    <nav class="navbar">
-        <a href="index.html"> <i class="fas fa-home"></i> <span>home</span> </a>
-        <a href="about.html"> <i class="fas fa-user"></i> <span>about</span> </a>
-        <a href="youtube.html"> <i class="fas fa-video"></i> <span>YouTube</span> </a>
-        <a href="contact.html"> <i class="fas fa-book-reader"></i> <span>contact</span> </a>
-    </nav>
-
-    <!-- navbar section ends -->
 
     <div class="contact-section">
 
@@ -35,7 +26,7 @@
             <input type="email" class="contact-form-text" placeholder="Your email">
             <input type="text" class="contact-form-text" placeholder="Your phone">
             <textarea class="contact-form-text" placeholder="Your message"></textarea>
-            <input type="submit" class="index.html" value="Send">
+            <input type="submit" class="contact-form-btn" value="Send">
         </form>
     </div>
     
