--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,7 @@
 
     <div class="row">
 
-        <div class="image">
-            <img src="images/contact-img.svg" alt="">
-        </div>
-
-        <form action="">
+        <form action="https://gniruthian.github.io/demian-s-technology/">
             <div class="inputBox">
                 <input type="text" placeholder="name">
                 <input type="email" placeholder="email">
