--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
                     <div class="box">
                         <h3> <span>name : </span> T.Demian </h3>
                         <h3> <span>age : </span> 16 </h3>
-                        <h3> <span>address : </span> Sri Lanka </h3>
+                        <h3> <span>county : </span> Sri Lanka </h3>
                     </div>
 
                     <div class="box">
