--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
 
                 <div class="box">
                     <h3>10+</h3>
-                    <p>awards won</p>
+                    <p>Subscription</p>
                 </div>
 
             </div>
